# agentic-coding-topology

./: README.md  codetopo.toml  fix_pass.py  pyproject.toml
.claude/: settings.json
.claude/commands/: review.md
.claude/hooks/: codetopo-check.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
agentic_coding_topology/: __init__.py  cli.py  viz.py
agentic_coding_topology/graph/: builder.py
agentic_coding_topology/normalizer/: python.py
agentic_coding_topology/topology/: analyzer.py
corpus/: manifest.json
corpus/ab_review_results/: comparison.json
corpus/agent_assisted/: nanochat__dev__gen_synthetic_data.py.json  nanochat__dev__repackage_data_reference.py.json  nanochat__nanochat____init__.py.json  nanochat__nanochat__checkpoint_manager.fixed.py.json  nanochat__nanochat__checkpoint_manager.py.json  nanochat__nanochat__common.py.json  nanochat__nanochat__core_eval.py.json  nanochat__nanochat__dataloader.py.json  nanochat__nanochat__dataset.py.json  nanochat__nanochat__engine.py.json  nanochat__nanochat__execution.py.json  nanochat__nanochat__flash_attention.py.json  nanochat__nanochat__fp8.py.json  nanochat__nanochat__gpt.py.json  nanochat__nanochat__loss_eval.py.json  nanochat__nanochat__optim.py.json  nanochat__nanochat__report.py.json  nanochat__nanochat__tokenizer.py.json  nanochat__scripts__base_eval.py.json  nanochat__scripts__base_train.py.json  nanochat__scripts__chat_cli.py.json  nanochat__scripts__chat_eval.py.json  nanochat__scripts__chat_rl.py.json  nanochat__scripts__chat_sft.py.json  nanochat__scripts__chat_web.py.json  nanochat__scripts__tok_eval.py.json  nanochat__scripts__tok_train.py.json  nanochat__tasks__arc.py.json  nanochat__tasks__common.py.json  nanochat__tasks__customjson.py.json  (+42 more)
(+45 files in other folders)
