[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-coding-topology"
version = "0.1.0"
description = "Algebraic topology for code quality enforcement. Two-pass pipeline: normalize agent code → topology analysis → deterministic findings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ben West", email = "ben@benwest.blog" }]
keywords = ["code-quality", "algebraic-topology", "static-analysis", "agents", "networkx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "networkx>=3.3",
    "numpy>=1.26",
    "scipy>=1.13",
]

[project.optional-dependencies]
# Persistent homology (H1 features / topological holes)
topology = ["ripser>=0.6"]
# Development and testing
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
# All optional deps
all = ["agentic_coding_topology[topology,dev]"]

[project.scripts]
codetopo = "agentic_coding_topology.cli:main"

[project.urls]
Repository = "https://github.com/M0nkeyFl0wer/agentic-coding-topology"
Issues = "https://github.com/M0nkeyFl0wer/agentic-coding-topology/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["agentic_coding_topology"]
